AM_CFLAGS = @EXTRA_CFLAGS@

noinst_LIBRARIES = libutil.a
libutil_a_SOURCES = \
	byte.c \
	cfgopt.c \
	checksum.c \
	daemon.c \
	file.c \
	net.c \
	pcapnet.c \
	rate.c \
	ring.c \
	rng.c \
	scanfmt.c \
	server.c \
	socket.c \
	uint.c \
	util.c

EXTRA_DIST = \
	byte.h \
	cfgopt.h \
	checksum.h \
	daemon.h \
	file.h \
	net.h \
	pcapnet.h \
	rate.h \
	ring.h \
	rng.h \
	scanfmt.h \
	server.h \
	socket.h \
	uint.h \
	util.h
